terraform/deploy_iac_tf_ansible/IGW_creation.tf
#Create Igw in us-east-1
resource "aws_internet_gateway" "igw"{
    provider = aws.region-master
    vpc_id = aws_vpc.vpc_master.id
}

#Create Igw in us-west-2
resource "aws_internet_gateway" "igw-oregon"{
    provider = aws.region-worker
    vpc_id = aws_vpc.vpc_master_oregon.id
}

#Get all available AZ's in VPC for master region
data "aws_availability_zones" "azs" {
    provider = aws.region-master
    state = "available"
  
}

#create subnet # 1 in us-east-1

resource "aws_subnet" "subnet_1" {
    provider = aws.region-master
    availability_zone = element(data.aws_availability_zones.names, 0)
    vpc_id = aws_vpc.vpc_master.id
    cidr_block = "10.0.1.0/24"
}

#create subnet # 2 in us-east-1

resource "aws_subnet" "subnet_2" {
    provider = aws.region-master
    availability_zone = element(data.aws_availability_zones.names, 1)
    vpc_id = aws_vpc.vpc_master.id
    cidr_block = "10.0.2.0/24"
}

#create subnet in us-west-2

resource "aws_subnet" "subnet_1_oregon" {
    provider = aws.region-worker
    vpc_id = aws_vpc.vpc_master_oregon.id
    cidr_block = "192.168.1.0/24"
}
