terraform/deploy_iac_tf_ansible/deploy_ec2.tf
#Create and bootstrap EC2 in us-east-1
resource "aws_instance" "jenkins-master" {
    provider = aws.region-master
    ami = data.aws_ssm_parameter.linuxAmi.value
    key_name = aws_key_pair.master-key.key_name
    associate_public_ip_address = true
    vpc_security_group_ids = [aws_security_group.jenkins-sg.id]
    subnet_id = aws_subnet.subnet_1.id
    
    tags = {
      Name = "jenkins_master_tf"
    }
    depends_on = [aws_main_route_table_association.set-master-default-rt-assoc]
    provisioner "local-exec" {
            command = <<EOF
        aws --profile ${var.profile} ec2 wait instance-status-ok --region ${var.region-master} --instance-ids ${self.id}
        ansible-playbook --extra-vars "passed_in_hosts=tag_Name_${self.tags.name}" ansible_templates/jenkins-master-sample.yml
        EOF
    }
}

#Create and bootstrap EC2 in us-west-2
resource "aws_instance" "jenkins-worker-oregon" {
    provider = aws.region-worker
    count  = var.workers-count
    ami = data.aws_ssm_parameter.linuxAmiOregon.value
    instance_type = var.instance_type
    key_name = aws_key_pair.worker-key.key_name
    associate_public_ip_address = true
    vpc_security_group_ids = [aws_security_group.jenkins-sg-oregon.id]
    subnet_id = aws_subnet.subnet_1_oregon.id
    
    tags = {
      Name = join("_",["jenkins_worker_tf", count.index + 1])
    }
    depends_on = [aws_main_route_table_association.set-worker-default-rt-assoc,aws_instance.jenkins-master]

    provisioner "local-exec" {
            command = <<EOF
        aws --profile ${var.profile} ec2 wait instance-status-ok --region ${var.region-worker} --instance-ids ${self.id}
        ansible-playbook --extra-vars "passed_in_hosts=tag_Name_${self.tags.name}" ansible_templates/jenkins-worker-sample.yml
        EOF
    }

}
variable "workers-count" {
    type = number
    default = 1 
}

variable "instance_type" {
    type = string
    default = "t3.micro"
  
}

output "jenkins-Main-Node-Public-IP" {
    value = aws_instance.jenkins-master.public_ip
}

output "jenkins-Worker-Public-IPs" {
    value = {
        for instance in aws_instance.jenkins-worker-oregon:
        instance.id => instance.public_ip
    } 
}
